--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,7 +2,7 @@ body
 {
     color: #333;
     text-align: center;
-    font-family: "Arial";
+    font-family: arial;
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -12,7 +12,7 @@ body
     width: 70%;
     padding: 1em;
     text-align: left;
-    border: 1px solid #ddd;
+    border: 2px solid #ddd;
     margin: 0 auto;
 
 }
